--- a/docker-webhook/docker-compose.yml
+++ b/docker-webhook/docker-compose.yml
@@ -8,7 +8,8 @@ services:
      - "9000:9000"
     volumes: 
       - ./shared:/etc/webhook/shared
-      - //var/run/docker.sock:/var/run/docker.sock
+      - /etc/webhook/cache:/etc/webhook/cache
+      - /var/run/docker.sock:/var/run/docker.sock
     environment:
      - "DOCKER_USERNAME=generaltao725"
       
