--- a/docker-webhook/docker-compose.yml
+++ b/docker-webhook/docker-compose.yml
@@ -10,6 +10,8 @@ services:
       - ./shared:/etc/webhook/shared
       - /etc/webhook/cache:/etc/webhook/cache
       - /var/run/docker.sock:/var/run/docker.sock
+    env_file:
+     - .env
     environment:
      - "DOCKER_USERNAME=generaltao725"
       
