--- a/docker-webhook/docker-compose.yml
+++ b/docker-webhook/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2.4'
 
 services:
-  webhook:
+   prodenv-docker-webhook:
     image: generaltao725/docker-webhook
     container_name: prodenv-docker-webhook
     ports: 
