--- a/docker-webhook/docker-compose.yml
+++ b/docker-webhook/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - /etc/webhook/cache:/etc/webhook/cache
       - /var/run/docker.sock:/var/run/docker.sock
     env_file:
-     - .env
+     - ../.env
     environment:
      - "DOCKER_USERNAME=generaltao725"
       
