--- a/loki/docker-compose.yml
+++ b/loki/docker-compose.yml
@@ -6,7 +6,10 @@ services:
     ports:
       - 3100:3100
     volumes:
-      - ./config.yaml:/etc/loki/config.yaml
+      - ./configs:/etc/loki
+    command: "-config.file=/etc/loki/config.yaml -config.expand-env=true"
+    env_file:
+     - ../.env
     healthcheck:
       test: [ "CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:3100/ready || exit 1" ]
       interval: 10s
