--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -2,22 +2,24 @@ version: '2.4'
 
 services:
   prodenv-minio:
-    image: minio/minio
+    image: minio/minio:RELEASE.2023-02-17T17-52-43Z
+    container_name: prodenv-minio
     entrypoint:
       - sh
       - -euc
       - |
         mkdir -p /data/loki-data && \
         mkdir -p /data/loki-ruler && \
-        minio server /data
+        minio server /data --console-address ":9002"
     environment:
-      - MINIO_ACCESS_KEY=loki
+      - MINIO_ROOT_USER=loki
       - MINIO_PROMETHEUS_AUTH_TYPE=public
       - MINIO_UPDATE=off
     env_file:
      - ../.env
     ports:
-      - 9000:9000
+      - 9001:9000
+      - 9002:9002
     volumes:
       - prodenv-minio-data:/data
     healthcheck:
