--- a/loki/configs/config.yaml
+++ b/loki/configs/config.yaml
@@ -17,7 +17,7 @@ common:
   replication_factor: 1
   storage:
     s3:
-      endpoint: prodenv-minio:9001
+      endpoint: prodenv-minio:9000
       insecure: true  
       bucketnames: loki-data
       access_key_id: loki
@@ -32,5 +32,4 @@ ruler:
       bucketnames: loki-ruler
 
 ingester:
-  chunk_idle_period: 20s
-  chunk_retain_period: 20s
+  chunk_idle_period: 1m
