--- a/prodenv/logging/loki/docker-compose.yml
+++ b/prodenv/logging/loki/docker-compose.yml
@@ -3,6 +3,7 @@ version: '2.4'
 services:
   prodenv-loki:
     image: grafana/loki:2.7.1
+    container_name: prodenv-loki
     volumes:
       - ./configs:/etc/loki
     command: "-config.file=/etc/loki/config.yaml -config.expand-env=true"
