--- a/prodenv/logging/mc/docker-compose.yml
+++ b/prodenv/logging/mc/docker-compose.yml
@@ -8,17 +8,16 @@ services:
      - ../.env
     entrypoint: 
       - sh
-      - -euc
-      - |
-        /usr/bin/mc alias set minio http://prodenv-minio:9000 $MINIO_ACCESS_KEY $MINIO_ROOT_PASSWORD && \
-        tail -f /dev/null
+      - -c
+      - /shared/entrypoint.sh
     volumes:
      - prodenv-mc-data:/backup
+     - ./shared:/shared
     networks:
       - loki-network
     labels:
       - "docker-volume-backup.archive-pre=/bin/bash -c 'mc mirror --remove --overwrite minio/loki-data /backup/current'"
-      - "command-runner.group=group-1"
+      - "command-runner.group=prodenv"
       - "command-runner.shell=/bin/sh -c"
       - "command-runner.command=mc mirror --overwrite /backup/archived minio/loki-data; rm -r /backup/archived"
 
