remove blueocean version

--- a/prodenv/cicd/jenkins/Dockerfile
+++ b/prodenv/cicd/jenkins/Dockerfile
@@ -15,4 +15,4 @@ RUN apt-get update && apt-get install -y docker-ce-cli docker-compose-plugin
 #    && keytool -keystore cacerts -storepass changeit -noprompt -trustcacerts -importcert -alias domaincrt -file domain.crt
 
 USER jenkins
-RUN jenkins-plugin-cli --plugins "blueocean:1.25.6 docker-workflow:1.29"
+RUN jenkins-plugin-cli --plugins "blueocean docker-workflow"
