modified:   cicd/jenkins-dind/docker-compose.yml

--- a/cicd/jenkins-dind/docker-compose.yml
+++ b/cicd/jenkins-dind/docker-compose.yml
@@ -5,6 +5,7 @@ services:
     image: docker:dind
     container_name: prodenv-jenkins-dind
     privileged: true
+    command: --storage-driver overlay2
     networks: 
       jenkins:
         aliases:
