--- a/cicd/jenkins/docker-compose.yml
+++ b/cicd/jenkins/docker-compose.yml
@@ -10,8 +10,7 @@ services:
           - docker
     environment:
       - DOCKER_HOST=tcp://docker:2376
-      - DOCKER_CERT_PATH=/certs/client
-      - DOCKER_TLS_VERIFY=1
+      - DOCKER_CERT_PATH=
       - TESTCONTAINERS_HOST_OVERRIDE=localhost
       - JAVA_OPTS=-Dorg.jenkinsci.plugins.ghprb.GhprbRepository.webhook.insecure=true
     ports:
