--- a/cicd/jenkins/docker-compose.yml
+++ b/cicd/jenkins/docker-compose.yml
@@ -11,7 +11,7 @@ services:
     environment:
       - DOCKER_HOST=tcp://docker:2376
       - DOCKER_CERT_PATH=/certs/client
-      # - DOCKER_TLS_VERIFY=1
+      - DOCKER_TLS_VERIFY=1
       - JAVA_OPTS=-Dorg.jenkinsci.plugins.ghprb.GhprbRepository.webhook.insecure=true
     ports:
       - 8080:8080
