--- a/cicd/jenkins-dind/docker-compose.yml
+++ b/cicd/jenkins-dind/docker-compose.yml
@@ -13,9 +13,9 @@ services:
     environment:
       - DOCKER_TLS_CERTDIR=/certs
     volumes:
-      - prodenv-jenkins-data:/certs/client
+      - prodenv-jenkins-certs:/certs/client
       - prodenv-jenkins-data:/var/jenkins_home
-      - /etc/docker/certs.d:/etc/docker/certs.d
+      # - /etc/docker/certs.d:/etc/docker/certs.d
     ports:
     # todo might be redundant
       - 2376:2376
