--- a/cicd/jenkins-dind/docker-compose.yml
+++ b/cicd/jenkins-dind/docker-compose.yml
@@ -5,20 +5,15 @@ services:
     image: docker:dind
     container_name: prodenv-jenkins-dind
     privileged: true
-    command: --storage-driver overlay2
+    command: ["--tls=false"]
     networks: 
       jenkins:
         aliases:
           - docker
     environment:
-      - DOCKER_TLS_CERTDIR=/certs
-    volumes:
-      - prodenv-jenkins-certs:/certs/client
-      - prodenv-jenkins-data:/var/jenkins_home
-      # - /etc/docker/certs.d:/etc/docker/certs.d
-    ports:
-    # todo might be redundant
-      - 2376:2376
+      DOCKER_TLS_CERTDIR: ""
+      # Improve performance with overlayfs.
+      DOCKER_DRIVER: overlay2
     healthcheck:
       test: docker ps || exit 1
       interval: 10s
