--- a/logging/loki/docker-compose.yml
+++ b/logging/loki/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '2.4'
 
 services:
-  prodenv-loki:
+  loki:
     image: grafana/loki:2.7.1
-    container_name: prodenv-loki
     volumes:
       - ./configs:/etc/loki
     command: "-config.file=/etc/loki/config.yaml -config.expand-env=true"
