--- a/logging/mc/docker-compose.yml
+++ b/logging/mc/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '2.4'
 
 services:
-  prodenv-mc:
+  mc:
     image: minio/mc:RELEASE.2023-02-16T19-20-11Z
-    container_name: prodenv-mc
     env_file:
      - ../.env
     entrypoint: 
@@ -11,7 +10,7 @@ services:
       - -c
       - /shared/entrypoint.sh
     volumes:
-     - prodenv-mc-data:/backup
+     - mc-data:/backup
      - ./shared:/shared
     networks:
       - loki-network
@@ -26,4 +25,4 @@ networks:
   loki-network:
 
 values:
- prodenv-mc-data:
+ mc-data:
