--- a/logging/minio/docker-compose.yml
+++ b/logging/minio/docker-compose.yml
@@ -1,9 +1,8 @@
 version: '2.4'
 
 services:
-  prodenv-minio:
+  minio:
     image: minio/minio:RELEASE.2023-02-17T17-52-43Z
-    container_name: prodenv-minio
     entrypoint:
       - sh
       - -euc
@@ -20,7 +19,7 @@ services:
     ports:
       - 9002:9002
     volumes:
-      - prodenv-minio-data:/data
+      - minio-data:/data
     healthcheck:
       test: [ "CMD", "curl", "-f", "http://localhost:9000/minio/health/live" ]
       interval: 1s
@@ -30,7 +29,7 @@ services:
       - loki-network
 
 values:
-  prodenv-minio-data:
+  minio-data:
 
 networks:
   loki-network:
