--- a/cicd/docker-webhook/docker-compose.yml
+++ b/cicd/docker-webhook/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.4'
 
 services:
    docker-webhook:
-    image: generaltao725/docker-webhook
+    image: generaltao725/docker-webhook:0.4.0
     ports: 
      - "9000:9000"
     volumes: 
