--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 .env
+test/run-backup-restore/backup
+test/run-backup-restore/cicd
+test/run-backup-restore/logging
+test/run-backup-restore/portainer
