--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -8,4 +8,4 @@ services:
       - 9443:9443
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - portainer_data:/data
+      - portainer-data:/data
