--- a/logging/loki/configs/config.yaml
+++ b/logging/loki/configs/config.yaml
@@ -20,8 +20,8 @@ common:
       endpoint: minio:9000
       insecure: true  
       bucketnames: loki-data
-      access_key_id: loki
-      secret_access_key: supersecret
+      access_key_id: ${MINIO_ACCESS_KEY}
+      secret_access_key: ${MINIO_ROOT_PASSWORD}
       s3forcepathstyle: true
   ring:
     kvstore:
