--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ test/run-backup-restore/cicd
 test/run-backup-restore/logging
 test/run-backup-restore/portainer
 test/run-backup-restore/docker-compose.yml
+cicd/docker-webhook/shared/envs
 
