--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-.env
+cicd/.env
+logging/.env
+test/run-backup-restore/backup
+test/run-backup-restore/cicd
+test/run-backup-restore/logging
+test/run-backup-restore/portainer
+test/run-backup-restore/docker-compose.yml
+cicd/docker-webhook/shared/envs
+
