--- a/cicd/docker-webhook/docker-compose.yml
+++ b/cicd/docker-webhook/docker-compose.yml
@@ -1,15 +1,16 @@
 version: '2.4'
 
 services:
-  webhook:
-    image: generaltao725/docker-webhook
-    container_name: prodenv-docker-webhook
+   docker-webhook:
+    image: generaltao725/docker-webhook:0.6.0
     ports: 
-     - "9000:9000"
+     - 127.0.0.1:9000:9000
     volumes: 
       - ./shared:/etc/webhook/shared
-      - ../assets:/etc/webhook/assets
+      - //etc/webhook/cache:/etc/webhook/cache
       - //var/run/docker.sock:/var/run/docker.sock
+    env_file:
+     - ../.env
     environment:
      - "DOCKER_USERNAME=generaltao725"
       
