--- a/nginx-proxy-manager/docker-compose.yml
+++ b/nginx-proxy-manager/docker-compose.yml
@@ -3,6 +3,8 @@ version: '2.4'
 services:
   nginx-proxy-manager:
     image: 'jc21/nginx-proxy-manager:2.10.4'
+    extra_hosts:
+     - "host.docker.internal:host-gateway"
     ports:
       # These ports are in format <host-port>:<container-port>
       - 443:443 # Public HTTPS Port
