--- a/logging/prometheus/docker-compose.yml
+++ b/logging/prometheus/docker-compose.yml
@@ -3,6 +3,8 @@ version: '2.4'
 services:
   prometheus:
     image: prom/prometheus:v2.47.1
+    ports:
+      - 9090:9090
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
       - prometheus_data:/prometheus
