--- a/logging/prometheus/prometheus.yml
+++ b/logging/prometheus/prometheus.yml
@@ -1,11 +1,18 @@
 global:
-  scrape_interval: 15s
+  scrape_interval:     15s # Set the scrape interval to every 15 seconds. Default is every 1 minute.
+  evaluation_interval: 15s # Evaluate rules every 15 seconds. The default is every 1 minute.
+  # scrape_timeout is set to the global default (10s).
 
 scrape_configs:
   - job_name: 'prometheus'
     scrape_interval: 15s
     static_configs:
       - targets: ['localhost:9090']
+  - job_name: 'spring boot scrape'
+    metrics_path: '/actuator/prometheus'
+    scrape_interval: 5s
+    static_configs:
+      - targets: ['host.docker.internal:9015']
 
   - job_name: 'node'
     static_configs:
