--- a/nginx/nginx/docker-compose.yml
+++ b/nginx/nginx/docker-compose.yml
@@ -2,7 +2,7 @@ version: '2.4'
 
 services:
   nginx:
-    image: nginx:latest
+    image: nginx:1.29.0
     container_name: nginx
     # entrypoint: "/bin/sh -c 'cat /etc/nginx/nginx.conf'"
     # command: tail -f /dev/null
